# faiss

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
faiss/: CMakeLists.txt
faiss/gpu/: CMakeLists.txt  GpuDistance.cpp  GpuDistance.h  GpuIndex.cpp  GpuIndex.h  GpuIndexBinaryFlat.cpp  GpuIndexFlat.cpp  GpuIndexIVF.cpp  GpuIndexIVFFlat.cpp  GpuIndexIVFPQ.cpp  GpuIndexIVFScalarQuantizer.cpp  GpuResources.cpp  GpuResources.h  StandardGpuResources.cpp  StandardGpuResources.h
faiss/gpu/impl/: BinaryDistance.cpp  BinaryDistance.h  BinaryFlatIndex.cpp  BinaryFlatIndex.h  BroadcastSum.cpp  BroadcastSum.h  Distance.cpp  Distance.h  DistanceUtils.h  FlatIndex.cpp  FlatIndex.h  GeneralDistance.h  GpuScalarQuantizer.h  IVFAppend.cpp  IVFAppend.h  IVFBase.cpp  IVFBase.h  IVFFlat.cpp  IVFFlat.h  IVFFlatScan.cpp  IVFFlatScan.h  IVFInterleaved.cpp  IVFInterleaved.h  IVFPQ.cpp  IVFPQ.h  IVFUtils.cpp  IVFUtils.h  IVFUtilsSelect1.cpp  IVFUtilsSelect2.cpp  IcmEncoder.cpp  IndexUtils.cpp  IndexUtils.h  InterleavedCodes.cpp  InterleavedCodes.h  L2Norm.cpp  L2Norm.h  L2Select.cpp  L2Select.h  PQCodeDistances-inl.h  PQCodeDistances.h  (+7 more)
faiss/gpu/impl/scan/: IVFInterleavedImpl.h
faiss/gpu/perf/: PerfBinaryFlat.cpp  PerfFlat.cpp  PerfIVFFlat.cpp  PerfIVFPQ.cpp  PerfSelect.cpp
faiss/gpu/test/: CMakeLists.txt  TestCodePacking.cpp  TestGpuDistance.cpp  TestGpuSelect.cpp  TestUtils.cpp
faiss/gpu/test/ports/: CMakeLists.txt  TestL2NormKernel.cpp  TestL2SelectMin.cpp  (+1 more)
faiss/gpu/utils/: BlockSelectFloat.cpp  BlockSelectKernel.h  CopyUtils.h  DeviceDefs.h  DeviceTensor.h  DeviceUtils.cpp  DeviceUtils.h  DeviceVector.h  Float16.h  HostTensor.h  Limits.h  LoadStoreOperators.h  MathOperators.h  MatrixMult-inl.h  MatrixMult.h  MergeNetworkBlock.h  MergeNetworkWarp.h  PtxUtils.h  ReductionOperators.h  Reductions.h  Select.h  Tensor-inl.h  Tensor.h  Transpose.h  WarpSelectFloat.cpp  WarpSelectKernel.h  WarpShuffles.h
faiss/python/: CMakeLists.txt  swigfaiss.swig
tests/: CMakeLists.txt
(+2 files in other folders)
